# tennis

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: JAXON_RED_BATTING.cnoid.in  JAXON_RED_FOREHAND-STEP.cnoid.in  JAXON_RED_FOREHAND.cnoid.in  JAXON_RED_KICK.cnoid.in  JAXON_RED_PUNCH.cnoid.in  JAXON_RED_SMASH.cnoid.in  JAXON_RED_TENNIS.cnoid.in  angle.l  p-orig.l  tennis.rviz  tennis.yaml
euslisp/: #nlopt_bspline_optimization.l#  #plot-utils.l#  #test.l#  .#plot-utils.l  aaa.l  aaa.l~  angle-vector.eps  angular-vel-vector.eps  b.l  bspline.l  calc-plan.l  do_motion_viewer.l  do_motion_viewer.l~  eus-shm-online-trajectory-modification.l  exec.l  experiment_utils.l  for-thesis-comp-ik.l  for-thesis-larm-ik.l  forehand-volley-step-p-orig.l  forehand_jerk_0.l  forehand_jerk_1.l  fullbody-ik-jaxon.l  get-angle-vector.l  global-variables.l  hit-point-vel-norm.eps  hit-point.eps  is-choreonoid.l  jaxon-collision-model.l  jaxon-racket-movement.l  make-loadpattern-with-work-space.l  make-racket-wrl.l  motion-choice.l  motion_viewer.l  my-range.l  nlopt_bspline_optimization.l  online_trajectory_modification.l  play-motion.l  plot-utils.l  pos-and-vel-and-acc.l  preview-control-for-impulsive-force.l  (+20 more)
launch/: calc_mocap_swing_posrot.launch  calc_mocap_swing_speed.launch  flea3_camera.launch  flea3_tennis_recognition.launch  forehand.launch  rosbag_baseball_recognition.launch  stereo_ball_reconstruction.launch  tennis.launch  tennis.launch.in  ukf_ball_prediction.launch  zed_camera.launch  zed_tennis_recognition.launch
misc/: euslisp-relation.dot  memo.l  memo.txt  (+8 more)
(+845 files in other folders)
